# todoNotifier

./: index.html  package-lock.json  package.json
src/: App.css  App.tsx  Work.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: file_work.rs  main.rs  proto_work.rs  sync_work.rs  week.rs  work.rs
src-tauri/work_dir/: json.txt
