[package]
name = "todonotifier"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
tonic-build = "0.11.0"


[dependencies]
tauri = { version = "1.5", features = [ "os-all"] }
thiserror = "1.0.56"
chrono = "0.4.38"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
humantime = "*"
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.4"
prost-build = "0.12.4"
tonic-build = "0.11.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
